(fix) O3-5257: fix overlay workspace windows not showing

--- a/packages/framework/esm-styleguide/src/components/_general.scss
+++ b/packages/framework/esm-styleguide/src/components/_general.scss
@@ -47,7 +47,6 @@ body {
   height: calc(100vh - var(--omrs-navbar-height));
   top: var(--omrs-navbar-height);
   z-index: 9000;
-  contain: layout style paint;
   will-change: contents;
 }
 
