--- a/packages/framework/esm-styleguide/src/workspaces2/workspace-windows-and-menu.module.scss
+++ b/packages/framework/esm-styleguide/src/workspaces2/workspace-windows-and-menu.module.scss
@@ -2,8 +2,10 @@
   position: relative;
   display: flex;
   height: 100%;
+  contain: content;
 
   &.overlay {
+    contain: none;
     position: absolute;
     right: 0;
     top: 0;
